APIs integration and updated swagger files
