# controllers/docs/swagger/swagger.yaml
@@ -1,20 +1,41 @@
+basePath: '{{.BasePath}}'
+host: '{{.Host}}'
 info:
   contact: {}
+  description: deploy services on kubernetes cluster
   license: {}
+  title: Get
+  version: '{{.Version}}'
 paths:
   /api/v1/kubernetes/deploy:
     post:
       consumes:
       - application/json
-      description: deploy services on kubernetes cluste
+      description: deploy services on kubernetes cluster
       produces:
       - application/json
       summary: deploy services on kubernetes cluster
   /api/v1/registry:
+    post:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+  /api/v1/registry/{namespace}/{name}:
     delete:
       consumes:
       - application/json
       description: deploy services on kubernetes cluster
+      parameters:
+      - description: Name of the kubernetes service
+        in: path
+        name: name
+        required: true
+        type: string
+      - description: Namespace of the kubernetes service
+        in: path
+        name: namespace
+        type: string
       produces:
       - application/json
       summary: deploy services on kubernetes cluster
@@ -22,13 +43,16 @@ paths:
       consumes:
       - application/json
       description: deploy services on kubernetes cluster
-      produces:
-      - application/json
-      summary: deploy services on kubernetes cluster
-    post:
-      consumes:
-      - application/json
-      description: deploy services on kubernetes cluster
+      parameters:
+      - description: Name of the kubernetes service
+        in: path
+        name: name
+        required: true
+        type: string
+      - description: Namespace of the kubernetes service
+        in: path
+        name: namespace
+        type: string
       produces:
       - application/json
       summary: deploy services on kubernetes cluster
@@ -83,3 +107,4 @@ paths:
       produces:
       - application/json
       summary: get status of  all kubernetes services deployment
+swagger: "2.0"
