# main/main.go
@@ -4,14 +4,10 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/swaggo/gin-swagger"
 	"github.com/swaggo/gin-swagger/swaggerFiles"
-
 	"io/ioutil"
-	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
-	"k8s.io/client-go/kubernetes"
-	"k8s.io/client-go/rest"
 	"kubernetes-services-deployment/constants"
 	"kubernetes-services-deployment/controllers"
-	"kubernetes-services-deployment/controllers/docs"
+	_ "kubernetes-services-deployment/controllers/docs"
 	"kubernetes-services-deployment/utils"
 	"os"
 )
@@ -20,9 +16,9 @@ func init() {
 	utils.LoggerInit(ioutil.Discard, os.Stdout, os.Stdout, os.Stderr)
 }
 
-// @title Kubernetes Deployment Engine
+// @title Swagger Example API
 // @version 1.0
-// @description Kubernetes server deployment engine.
+// @description This is a sample server Petstore server.
 // @termsOfService http://swagger.io/terms/
 
 // @contact.name API Support
@@ -32,32 +28,42 @@ func init() {
 // @license.name Apache 2.0
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
 
-// @host engine.swagger.io
-// @BasePath /api/v1/
+// @host petstore.swagger.io
+// @BasePath /v2
+
 func main() {
-	r := gin.Default()
+
+	e := gin.New()
 	utils.InitFlags()
+
+	if constants.ServicePort == "" {
+		constants.ServicePort = "8089"
+	}
 	c, _ := controllers.NewController()
-	v1 := r.Group("/api/v1")
+	v1 := e.Group("/api/v1")
 	{
 		dag := v1.Group("/kubernetes")
 		{
 			dag.POST("deploy", c.DeployService)
 		}
+		///statefulsets APIs
+		v1.GET("/statefulsets/{namespace}", c.ListStatefulSetsStatus)
+		v1.GET("/statefulsets/{namespace}/{name}", c.GetStatefulSetsStatus)
+		v1.DELETE("/statefulsets/{namespace}/{name}", c.DeleteStatefulSetsStatus)
 
+		//secrets APIs
+		v1.POST("registry", c.CreateRegistrySecret)
+		v1.GET("/registry/{namespace}/{name}", c.GetStatefulSetsStatus)
+		v1.DELETE("/registry/{namespace}/{name}", c.DeleteRegistrySecret)
 	}
-	if constants.ServicePort == "" {
-		constants.ServicePort = "8089"
-	}
-	docs.SwaggerInfo.Title = "Kubernetes Deployment Engine"
-	docs.SwaggerInfo.Description = "Kubernetes server deployment engine."
-	docs.SwaggerInfo.Version = "1.0"
 
-	docs.SwaggerInfo.BasePath = "/api/v1"
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-	r.Run(":" + constants.ServicePort)
+	e.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	e.Run(":" + constants.ServicePort)
+	//e.Logger.Fatal(e.Start(":" + constants.ServicePort))
+
 }
-func main_X() {
+
+/*func main_X() {
 
 	client, err := kubernetes.NewForConfig(&rest.Config{Host: "https://54.237.228.34:6443", Username: "cloudplex", Password: "64bdySICej", TLSClientConfig: rest.TLSClientConfig{Insecure: true}})
 	utils.Error.Println(err)
@@ -69,4 +75,4 @@ func main_X() {
 		utils.Info.Println(pods.Items[i].Name, pods.Items[i].Namespace)
 	}
 
-}
+}*/
